--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
     </div>
 
-    <img src="/images/image1-fotor-bg-remover-2023042811246.png" alt="" class="imag1">
+    <img src="/images/man.png" alt="" class="imag1">
 
 
    </div>
